<resources>
    <string name="app_name">TrainingAssistant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Start</string>
    <string name="menu_training_plan">Twój Plan Treningowy</string>
    <string name="menu_BMI">Kalkulator BMI</string>
    <string name="menu_calendar">Kalendarz</string>
    <string name="menu_meal_plan">Plan posiłków</string>
    <string name="menu_about_app">O aplikacji</string>
    <string name="menu_about_us">O nas</string>

    <string name="home_second">Home Second</string>

    <string name="bmi_inf">BMI (Body Mass Index) jest bardzo ogólnym wskaźnikiem,
        nie zaleca się stosowania jeżeli jesteś osobą regularnie wykonującą dowolną
        aktywność sportową!</string>
    <string name="give_weight">Podaj swoją wagę (kg)</string>
    <string name="give_height">Podaj swój wzrost (cm)</string>
    <string name="bmi_level_m1">Niedowaga, zwiększony poziom wystąpienia innych problemów
        zdrowotnych niż u osób z otyłością.</string>
    <string name="bmi_level_0">Optymalna waga ciała.</string>
    <string name="bmi_level_p1">Nadwaga, średnie ryzyko wystąpienia chorób towarzyszących otyłości.</string>
    <string name="bmi_level_p2">Otyłość, wysokie ryzyko wystąpienia chorób towarzyszących otyłości.</string>
    <string name="clear_button">Czyść</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="oblicz">oblicz</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>