<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_TrainingPlans"
            android:icon="@drawable/ic_menu_trainingplans"
            android:title="@string/menu_training_plan" />
        <item
            android:id="@+id/nav_BMI"
            android:icon="@drawable/ic_menu_bmi"
            android:title="@string/menu_BMI" />
        <item
            android:id="@+id/nav_MealPlan"
            android:icon="@drawable/ic_menu_mealplan"
            android:title="@string/menu_meal_plan" />
        <item
            android:id="@+id/nav_Calendar"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/menu_calendar" />

    </group>

    <item android:title="Informacje">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_AboutApp"
                android:icon="@drawable/ic_menu_aboutapp"
                android:title="@string/menu_about_app"/>
            <item
                android:id="@+id/nav_AboutUs"
                android:icon="@drawable/ic_menu_aboutus"
                android:title="@string/menu_about_us"/>
            </group>
        </menu>
    </item>

</menu>
