<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BmiFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bmi_inf" />

            <EditText
                android:id="@+id/et_Masa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/give_weight"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/et_Wzrost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/give_height"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/b_Submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="oblicz" />

            <TextView
                android:id="@+id/tv_Wynik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_Opis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp" />
        </LinearLayout>
    </FrameLayout>
</layout>
